platform/auth/auth-k8s/overlays/dev/keycloak-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30180
      name: http
  selector:
    app: keycloak
